[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NREL-pydss"
version = "3.1.8"
description = "A high-level python interface for OpenDSS"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Aadil Latif", email = "Aadil.Latif@nrel.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click~=8.1.8",
    "h5py~=3.13.0",
    "helics~=3.6.1",
    "loguru~=0.7.3",
    "networkx~=3.4.2",
    "numpy~=2.2.4",
    "OpenDSSDirect.py==0.8.4",
    "pandas~=2.2.3",
    "pvder~=0.6.0",
    "pydantic~=2.5.3",
    "pymongo~=4.11.3",
    "requests~=2.32.3",
    "scikit-learn~=1.6.1",
    "scipy~=1.15.2",
    "Shapely~=2.0.7",
    "tables~=3.10.1",
    "terminaltables~=3.1.10",
    "toml~=0.10.2",
]

[project.optional-dependencies]
dev = [
    "mock~=5.2.0",
    "pytest~=9.1.0",
    "pytest-cov~=7.1.0",
    "setuptools~=75.8.0",
    "sphinx~=7.4.7",
    "sphinx-rtd-theme~=3.1.0",
]
server = [
    "aiohttp_swagger3~=0.8.0",
    "aiohttp~=3.9.0",
]

[project.scripts]
pydss = "pydss.cli.pydss:cli"

[project.urls]
Homepage = "https://github.com/NatLabRockies/PyDSS"
Documentation = "https://natlabrockies.github.io/PyDSS/"


[tool.hatch.build.targets.sdist]
include = [
    "src/pydss",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydss"]